style: fix background color overscroll on mobile (#50)

--- a/.storybook/storybook.scss
+++ b/.storybook/storybook.scss
@@ -2,8 +2,21 @@ html {
     max-width: unset;
     padding: unset;
     margin: unset;
+    background-color: unset;
+    background-image: unset;
     &:before {
-        display: none;
+        display: block;
+        content: '';
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        background-image: url('./assets/svg/Grid.svg');
+        background-position: top left;
+        background-color: color(pastel, 'purple');
+        background-size: rem(50);
     }
 }
 
@@ -13,9 +26,6 @@ html {
 }
 .preview {
     padding: rem(20);
-    &:before {
-        display: block;
-    }
 }
 
 .docs-story {
